--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# 🧗‍♂️ **IFSC Rock Climbing Performance Analysis**\n",
         "\n",
-        "### Milestone 1: Exploratory Data Analysis (EDA)\n",
+        "### Final Project\n",
         "\n",
         "**Author:** Derrick DeBuhr  \n",
         "**Dataset:** IFSC Competition Results 1990–2019 (Kaggle)  \n",
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "m2Ymi-8M5pBj"
       },
@@ -123,7 +123,7 @@
         "id": "C_-zoeBl6Epy",
         "outputId": "ad1213ee-d236-47a2-cf3c-01ccff9d303f"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +311,7 @@
           "height": 496
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -346,7 +346,7 @@
           "height": 496
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
