--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -17,13 +17,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🧗‍♂️ **IFSC Rock Climbing Performance Analysis**\n",
-        "\n",
-        "### Final Project\n",
+        "#IFSC Climbing Performance & Trends (1991–2019)\n",
         "\n",
         "**Author:** Derrick DeBuhr  \n",
-        "**Dataset:** IFSC Competition Results 1990–2019 (Kaggle)  \n",
-        "**Goal:** Explore international climbing competition data to understand performance trends, relationships between climber attributes and results, and prepare for predictive modeling."
+        "**Course:** CS3120-001  \n",
+        "**Due Date:** 11/30/2025\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Dataset\n",
+        "\n",
+        "**Title:** IFSC Competition Results 1990–2019  \n",
+        "**Source:** Kaggle – Anthony Giorgio  \n",
+        "**Format:** Multi-sheet Excel Dataset  \n",
+        "\n",
+        "This dataset contains historical competition results from International Federation of Sport Climbing (IFSC) events between 1991 and 2019, including competitor information, scores, ages, and national representation.\n",
+        "\n",
+        "Key sheets used in this project:\n",
+        "- `6.1. Adult M` – Adult male competitors\n",
+        "- `7.1. Adult W` – Adult female competitors\n",
+        "- `2. Climbers` – Climber demographic information\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Motivation\n",
+        "\n",
+        "I am an active rock climber, and I am interested in using data science to better understand how elite competitive climbing has evolved over the last three decades. Competitive climbing has grown significantly in popularity worldwide, especially following its inclusion in the Olympics, and this dataset provides a unique opportunity to analyze long-term performance and demographic trends.\n",
+        "\n",
+        "This project explores how climber age, performance, and country representation have changed from 1991 to 2019, and identifies patterns in how different countries have developed their competitive climbing programs over time.\n",
+        "\n",
+        "---\n"
       ],
       "metadata": {
         "id": "S-6zIy02MfxT"
@@ -32,22 +55,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📘 Project Overview\n",
+        "##Project Goal\n",
         "\n",
-        "This notebook is the first milestone in a machine learning project exploring performance in international sport climbing competitions, using data from the **International Federation of Sport Climbing (IFSC)** spanning 1990–2019.\n",
+        "The goal of this project is to explore and model trends in international competitive climbing using historical IFSC competition data.\n",
         "\n",
-        "The dataset includes multiple Excel sheets containing:\n",
-        "- Competition results (for men, women, youth, and adults)\n",
-        "- Climber profiles (age, height, weight, nationality)\n",
-        "- Team and ranking information\n",
+        "Specifically, this project aims to answer the following questions:\n",
         "\n",
-        "**Objectives of this milestone:**\n",
-        "1. Load and inspect the IFSC dataset.\n",
-        "2. Perform basic exploratory data analysis (EDA).\n",
-        "3. Visualize key patterns in performance.\n",
-        "4. Prepare for later modeling stages (predicting performance outcomes).\n",
+        "1. How has the **age distribution of elite climbers** changed over time?\n",
+        "2. How does **age relate to performance scores** in adult competitions?\n",
+        "3. Which countries historically produce the **highest-performing climbers**?\n",
+        "4. Which countries are **gaining or losing professional climbers over time**?\n",
         "\n",
-        "This project aligns with my personal interest in rock climbing — the goal is to uncover what measurable factors contribute to performance across disciplines and time.\n"
+        "Rather than focusing on predicting outcomes for individual climbers, this project emphasizes **exploratory trend analysis and forecasting**, with the goal of telling a coherent story about how competitive climbing has evolved globally over the past 30 years.\n",
+        "\n",
+        "---\n"
       ],
       "metadata": {
         "id": "Y6cM56EJK_Sp"
@@ -56,10 +77,79 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ⚙️ 1. Setup\n",
+        "## Project Overview\n",
         "\n",
-        "In this section, we import Python libraries for data manipulation, visualization, and analysis.  \n",
-        "We also configure general display settings to make the data easier to explore.\n"
+        "This project is structured into the following major sections:\n",
+        "\n",
+        "1. **Data Loading & Cleaning**\n",
+        "   - Load multi-sheet IFSC dataset\n",
+        "   - Select adult competition results\n",
+        "   - Clean age and score values\n",
+        "\n",
+        "2. **Exploratory Data Analysis (EDA)**\n",
+        "   - Analyze age distributions of competitors\n",
+        "   - Study age trends over time\n",
+        "   - Examine age vs. score relationships\n",
+        "\n",
+        "3. **Country-Level Trends**\n",
+        "   - Identify countries with highest average performance\n",
+        "   - Track changes in national participation over time\n",
+        "   - Analyze performance trends by nation\n",
+        "\n",
+        "4. **Trend Modeling**\n",
+        "   - Fit regression models for age and performance trends\n",
+        "   - Identify performance slopes across decades\n",
+        "\n",
+        "5. **Discussion & Conclusion**\n",
+        "   - Synthesize findings\n",
+        "   - Highlight limitations\n",
+        "   - Suggest future research directions\n",
+        "\n",
+        "The project focuses exclusively on **adult competitors** (Men and Women) due to incomplete longitudinal data in youth divisions.\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6gk79Tys3o6r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Scope and Constraints\n",
+        "\n",
+        "To maintain clarity and scope within a semester-long project, the following decisions were made:\n",
+        "\n",
+        "- Only **adult competitors** were analyzed (youth data excluded unless needed for supplementary analysis).\n",
+        "- Performance is measured using the IFSC competition **score** system (0–100).\n",
+        "- Discipline-specific differences were not analyzed due to limited variation in available competition categories.\n",
+        "- The project focuses on **trend-level insights**, not on individual performance prediction.\n",
+        "\n",
+        "Limitations to acknowledge:\n",
+        "- The interpretation of scores is limited because exact ranking mapping (e.g., difference between 95 vs 99) is not fully documented.\n",
+        "- Inconsistent participation across years and countries may influence trend calculations.\n",
+        "- Some data missingness exists in age fields, especially in early years.\n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "1csXyYPw32fT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Environment Setup\n",
+        "\n",
+        "Before diving into the analysis, we load the required libraries. These handle data manipulation, visualization, and any modeling steps later in the notebook.\n",
+        "\n",
+        "- **pandas** – data handling  \n",
+        "- **numpy** – numerical operations  \n",
+        "- **matplotlib / seaborn** – plotting and visualization  \n",
+        "- **scikit-learn** – preprocessing and modeling  \n",
+        "\n",
+        "This ensures the environment is consistent and reproducible.\n"
       ],
       "metadata": {
         "id": "2yPoCsjGLC9g"
@@ -88,12 +178,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📂 2. Load the IFSC Dataset\n",
+        "##Data Loading\n",
         "\n",
-        "The IFSC dataset is stored as a multi-sheet Excel file.  \n",
-        "We read it into Python using **pandas**, which allows us to explore each sheet (e.g., adult men’s results, climber profiles, rankings).\n",
+        "The dataset is loaded into a pandas DataFrame for exploration and cleaning.  \n",
+        "At this stage, we focus on understanding the raw structure of the data.\n",
         "\n",
-        "We'll start by inspecting the available sheets to get a sense of the structure and content.\n"
+        "Key checks performed:\n",
+        "- Shape of the dataset (rows × columns)\n",
+        "- Column names and data types\n",
+        "\n",
+        "This gives us an initial sense of:\n",
+        "- What features are available\n",
+        "- Which variables might need cleaning or transformation\n"
       ],
       "metadata": {
         "id": "D3gJX7-_LXG-"
@@ -107,51 +203,6 @@
         "# Download latest version\n",
         "path = kagglehub.dataset_download(\"anthonygiorgio/ifsc-climbing-competition-results-1991-2019\")\n",
         "\n",
-        "print(\"Path to dataset files:\", path)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CqrBtIqxf1hw",
-        "outputId": "9b9ed43d-8066-44fd-8922-5586f2d4b886"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/anthonygiorgio/ifsc-climbing-competition-results-1991-2019?dataset_version_number=2...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 7.27M/7.27M [00:00<00:00, 116MB/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting files...\n",
-            "Path to dataset files: /root/.cache/kagglehub/datasets/anthonygiorgio/ifsc-climbing-competition-results-1991-2019/versions/2\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "data_dir = \"/root/.cache/kagglehub/datasets/anthonygiorgio/ifsc-climbing-competition-results-1991-2019/versions/2\"\n",
         "excel_path = os.path.join(data_dir, \"IFSC Competiton Results 1990-2019 Dataset.xlsx\")\n",
         "\n",
@@ -160,21 +211,22 @@
         "# Display sheet names & shapes\n",
         "print(\"Sheets loaded:\")\n",
         "for sheet, df in data.items():\n",
-        "    print(f\"{sheet}: {df.shape}\")\n"
+        "    print(f\"{sheet}: {df.shape}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XL8S6Zdwh-CZ",
-        "outputId": "85824d50-4c85-4ec3-a07a-05fd4c7f7125"
+        "id": "CqrBtIqxf1hw",
+        "outputId": "3973f542-fac1-494e-f4ab-67c0992c7c4b"
       },
-      "execution_count": 4,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Using Colab cache for faster access to the 'ifsc-climbing-competition-results-1991-2019' dataset.\n",
             "Sheets loaded:\n",
             "Index: (25, 7)\n",
             "AllCompetitions: (102249, 6)\n",
@@ -824,12 +876,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "-fenDXwiytOm",
-        "outputId": "c7fd3d58-56ad-4f01-c0b3-4d2699286d80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 591
-        }
+        },
+        "id": "-fenDXwiytOm",
+        "outputId": "c7fd3d58-56ad-4f01-c0b3-4d2699286d80"
       },
       "execution_count": 43,
       "outputs": [
@@ -889,12 +941,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "U0b5tBI1zzrH",
-        "outputId": "a8f03a9c-098f-437a-c887-37dca37f7854",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "id": "U0b5tBI1zzrH",
+        "outputId": "a8f03a9c-098f-437a-c887-37dca37f7854"
       },
       "execution_count": 53,
       "outputs": [
@@ -932,12 +984,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "_nlVtOQW0ODh",
-        "outputId": "c53f0a72-22bc-42f8-8a7a-c3015ac17d79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 480
-        }
+        },
+        "id": "_nlVtOQW0ODh",
+        "outputId": "c53f0a72-22bc-42f8-8a7a-c3015ac17d79"
       },
       "execution_count": 52,
       "outputs": [
