--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -249,6 +249,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Initial Data Inspection\n",
+        "\n",
+        "Here we perform:\n",
+        "- `.info()` to check data types and null values  \n",
+        "- `.describe()` for summary statistics  \n",
+        "- A scan for inconsistent or suspicious values  \n",
+        "\n",
+        "This step helps identify:\n",
+        "- Columns with missing data  \n",
+        "- Possible formatting issues  \n",
+        "- Features that may need encoding or scaling\n"
+      ],
+      "metadata": {
+        "id": "0CYEjGjS7ATO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Extract adult datasets\n",
@@ -256,25 +275,115 @@
         "adult_w = data[\"7.1.Adult W\"]\n",
         "\n",
         "print(\"Adult Men shape:\", adult_m.shape)\n",
-        "print(\"\\n\\nAdult Women shape:\", adult_w.shape)"
+        "print(adult_m.info())\n",
+        "print(adult_m.describe())\n",
+        "print(\"\\nAdult Men Head: \\n\", adult_m.head())\n",
+        "\n",
+        "\n",
+        "print(\"\\n\\nAdult Women shape:\", adult_w.shape)\n",
+        "print(adult_w.info())\n",
+        "print(adult_w.describe())\n",
+        "print(\"\\nAdult Women Head: \\n\", adult_w.head())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JUf50judjquu",
-        "outputId": "88b066cd-62e3-42af-cfb8-1d628dc7da35"
+        "outputId": "98961cfc-8d83-404d-c796-28da406794b8"
       },
-      "execution_count": 5,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Adult Men shape: (1469, 9)\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1469 entries, 0 to 1468\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column                        Non-Null Count  Dtype  \n",
+            "---  ------                        --------------  -----  \n",
+            " 0   year                          1469 non-null   int64  \n",
+            " 1   competition                   1469 non-null   object \n",
+            " 2   category                      1469 non-null   object \n",
+            " 3   nation                        1469 non-null   object \n",
+            " 4   climber ID                    1469 non-null   int64  \n",
+            " 5   lastname                      1469 non-null   object \n",
+            " 6   firstname                     1246 non-null   object \n",
+            " 7   score                         1469 non-null   float64\n",
+            " 8   age (at time of competition)  1468 non-null   object \n",
+            "dtypes: float64(1), int64(2), object(6)\n",
+            "memory usage: 103.4+ KB\n",
+            "None\n",
+            "              year    climber ID        score\n",
+            "count  1469.000000   1469.000000  1469.000000\n",
+            "mean   2006.668482   6269.912185     8.859769\n",
+            "std       8.528185   9058.970213    18.790200\n",
+            "min    1991.000000      1.000000     0.000000\n",
+            "25%    1999.000000    696.000000     0.000000\n",
+            "50%    2007.000000   5703.000000     0.000000\n",
+            "75%    2014.000000   8767.000000     8.000000\n",
+            "max    2019.000000  79046.000000   100.000000\n",
+            "\n",
+            "Adult Men Head: \n",
+            "    year                               competition    category nation  \\\n",
+            "0  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUS   \n",
+            "1  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUS   \n",
+            "2  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUS   \n",
+            "3  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUT   \n",
+            "4  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUT   \n",
+            "\n",
+            "   climber ID lastname firstname  score age (at time of competition)  \n",
+            "0         322  Weigand     Geoff    0.0                               \n",
+            "1         347   Verick      Hira    0.0                           18  \n",
+            "2         546    Baker      Mark    0.0                           28  \n",
+            "3         811    Fürst    Stefan   26.0                           22  \n",
+            "4         344   Rieser    Hannes    1.0                           26  \n",
             "\n",
             "\n",
-            "Adult Women shape: (920, 9)\n"
+            "Adult Women shape: (920, 9)\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 920 entries, 0 to 919\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column                        Non-Null Count  Dtype  \n",
+            "---  ------                        --------------  -----  \n",
+            " 0   year                          920 non-null    int64  \n",
+            " 1   competition                   920 non-null    object \n",
+            " 2   category                      920 non-null    object \n",
+            " 3   nation                        920 non-null    object \n",
+            " 4   climber ID                    920 non-null    int64  \n",
+            " 5   lastname                      920 non-null    object \n",
+            " 6   firstname                     727 non-null    object \n",
+            " 7   score                         920 non-null    float64\n",
+            " 8   age (at time of competition)  919 non-null    object \n",
+            "dtypes: float64(1), int64(2), object(6)\n",
+            "memory usage: 64.8+ KB\n",
+            "None\n",
+            "              year    climber ID       score\n",
+            "count   920.000000    920.000000  920.000000\n",
+            "mean   2007.933696   7744.873913   13.021739\n",
+            "std       8.477388  11421.910007   21.048497\n",
+            "min    1991.000000    986.000000    0.000000\n",
+            "25%    2001.000000   1326.000000    0.000000\n",
+            "50%    2009.000000   5983.000000    0.000000\n",
+            "75%    2016.000000   9634.000000   20.000000\n",
+            "max    2019.000000  79683.000000  100.000000\n",
+            "\n",
+            "Adult Women Head: \n",
+            "    year                               competition        category nation  \\\n",
+            "0  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    BEL   \n",
+            "1  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    CZE   \n",
+            "2  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    FRA   \n",
+            "3  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    FRA   \n",
+            "4  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    FRA   \n",
+            "\n",
+            "   climber ID   lastname firstname  score age (at time of competition)  \n",
+            "0        1154  Dorsimond  Isabelle   40.0                           30  \n",
+            "1        1039   Stranska   Barbara    2.0                           21  \n",
+            "2        1163  Patissier  Isabelle   80.0                           24  \n",
+            "3        1300    Raybaud   Nanette   55.0                           31  \n",
+            "4        1301     Richer   Natalie   47.0                           21  \n"
           ]
         }
       ]
@@ -282,7 +391,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Clean data"
+        "##Data Cleaning\n",
+        "\n",
+        "To prepare the dataset for analysis and modeling, the following cleaning steps were applied:\n",
+        "\n",
+        "### a) Handling Missing Values\n",
+        "We checked for missing values across all features and handled them using:\n",
+        "- Imputation (if appropriate), or  \n",
+        "- Row/column removal when missingness was minimal or non-critical.\n",
+        "\n",
+        "### b) Fixing Data Types\n",
+        "Some features required type conversion (e.g., `object` → `numeric` or `datetime`) to ensure proper analysis.\n",
+        "\n",
+        "### c) Removing or Correcting Outliers\n",
+        "Extreme or invalid values were inspected and either:\n",
+        "- Corrected (if a clear error), or  \n",
+        "- Removed if they would distort the analysis.\n",
+        "\n",
+        "### d) Feature Formatting\n",
+        "Categorical features were standardized to ensure consistent representation  \n",
+        "(e.g., fixing inconsistent labels or capitalization).\n"
       ],
       "metadata": {
         "id": "S070cwz9gtCT"
@@ -314,6 +442,7 @@
         "\n",
         "print(\"Adult Men shape:\", adult_m.shape)\n",
         "print(\"Adult Men Head: \\n\", adult_m.head())\n",
+        "\n",
         "print(\"\\n\\nAdult Women shape:\", adult_w.shape)\n",
         "print(\"Adult Women Head: \\n\", adult_w.head())"
       ],
@@ -322,9 +451,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gIWSVz_Ygtb3",
-        "outputId": "0bdaa766-770e-44d4-d95f-9f61a2b40360"
+        "outputId": "b0b13bb0-a1ed-4c59-8261-5b0ca55195d9"
       },
-      "execution_count": 6,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,6 +494,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Cleaned Dataset Summary\n",
+        "\n",
+        "After cleaning, we rechecked:\n",
+        "- Dataset shape  \n",
+        "- Data types  \n",
+        "- Missing value counts  \n",
+        "\n",
+        "This ensures we have a reliable, structured dataset ready for Exploratory Data Analysis (EDA) and modeling.\n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "h6hw3b1N8VCT"
+      }
     },
     {
       "cell_type": "markdown",
