--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -119,7 +119,7 @@
       "source": [
         "## Scope and Constraints\n",
         "\n",
-        "To maintain clarity and scope within a semester-long project, the following decisions were made:\n",
+        "To maintain clarity and scope within the deadline, the following decisions were made:\n",
         "\n",
         "- Only **adult competitors** were analyzed (youth data excluded unless needed for supplementary analysis).\n",
         "- Performance is measured using the IFSC competition **score** system (0–100).\n",
@@ -1441,6 +1441,22 @@
         "- Investment in national training systems\n",
         "- Changes in competition structure and participation\n",
         "\n",
+        "## Modern Competitive Convergence\n",
+        "\n",
+        "By the end of the dataset (around 2019), we see a strong trend toward **performance convergence**:\n",
+        "\n",
+        "- Most top countries fall into a **10–30 average score range**\n",
+        "- Earlier performance gaps largely disappear\n",
+        "- Competitive parity appears much stronger in the modern climbing era\n",
+        "\n",
+        "This leveling suggests that:\n",
+        "- Training methodologies and access to climbing infrastructure have become more globalized\n",
+        "- More countries now operate at a similar competitive level\n",
+        "- The international climbing field is more balanced than at its origin\n",
+        "\n",
+        "Rather than a single dominant nation, the modern era reflects a more **globally competitive ecosystem**.\n",
+        "\n",
+        "---\n",
         "---\n",
         "---\n"
       ],
@@ -1450,16 +1466,186 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Model Performance & Evaluation\n",
+        "\n",
+        "In this project, I focused on regression-based trend modeling rather than traditional prediction (e.g., predicting individual climbing scores). This approach made more sense given the structure of the dataset and the nature of the questions being explored.\n",
+        "\n",
+        "### What Worked Well\n",
+        "\n",
+        "- Polynomial regression on **average climbing score vs. age** revealed clear and interpretable patterns:\n",
+        "  - Women peak around **~27 years old** with a steep rise and decline.\n",
+        "  - Men peak later around **~31 years old** with a broader, flatter performance window.\n",
+        "- Linear regression on **average competitor age over time** confirmed a strong downward trend:\n",
+        "  - **Men:** −0.0585 years per year  \n",
+        "  - **Women:** −0.1775 years per year  \n",
+        "  This suggests increasing youth dominance, especially in women’s climbing.\n",
+        "- Country-level trend modeling successfully characterized cycles of dominance and global parity across decades.\n",
+        "\n",
+        "Rather than predicting outcomes, these models provided **explanatory insights into long-term performance trends** in professional climbing.\n",
+        "\n",
+        "---"
+      ],
       "metadata": {
         "id": "PVFjG_j1hqEA"
       }
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Model Performance & Evaluation\n",
+        "\n",
+        "In this project, I focused on regression-based trend modeling rather than traditional prediction (e.g., predicting individual climbing scores). This approach made more sense given the structure of the dataset and the nature of the questions being explored.\n",
+        "\n",
+        "### What Worked Well\n",
+        "\n",
+        "- Polynomial regression on **average climbing score vs. age** revealed clear and interpretable patterns:\n",
+        "  - Women peak around **~27 years old** with a steep rise and decline.\n",
+        "  - Men peak later around **~31 years old** with a broader, flatter performance window.\n",
+        "- Linear regression on **average competitor age over time** confirmed a strong downward trend:\n",
+        "  - **Men:** −0.0585 years per year  \n",
+        "  - **Women:** −0.1775 years per year  \n",
+        "  This suggests increasing youth dominance, especially in women’s climbing.\n",
+        "- Country-level trend modeling successfully characterized cycles of dominance and global parity across decades.\n",
+        "\n",
+        "Rather than predicting outcomes, these models provided **explanatory insights into long-term performance trends** in professional climbing.\n",
+        "\n",
+        "---"
+      ],
       "metadata": {
         "id": "__L2VnWShqPv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Limitations\n",
+        "\n",
+        "This project has several important limitations that impact the scope and interpretation of the results:\n",
+        "\n",
+        "1. **Ambiguity in Score Meaning**  \n",
+        "   The score ranges from 0–100 but does not map cleanly to placement or rank.  \n",
+        "   This limits our ability to interpret performance in absolute competitive terms.\n",
+        "\n",
+        "2. **Data Imbalance**  \n",
+        "   Most climbers fall within ages 18–30 and score ranges below 60, creating strong left-skew and reducing regression effectiveness on raw data.\n",
+        "\n",
+        "3. **Event-Level Variability**  \n",
+        "   Results are influenced by differences in:\n",
+        "   - Route difficulty  \n",
+        "   - Judging formats  \n",
+        "   - Evolution of IFSC rules over time  \n",
+        "   These factors introduce noise not directly accounted for in the model.\n",
+        "\n",
+        "4. **Missing Contextual Features**  \n",
+        "   There is no data on:\n",
+        "   - Training hours  \n",
+        "   - Injury history  \n",
+        "   - Experience level  \n",
+        "   - Style specialization  \n",
+        "   All of which could significantly affect performance.\n",
+        "\n",
+        "5. **Generalization Constraints**  \n",
+        "   These findings describe trends in **historic IFSC competitions only** and should not be extended to:\n",
+        "   - Recreational climbers  \n",
+        "   - Indoor gym-only climbers  \n",
+        "   - Modern Olympic-specific formats  \n",
+        "   without further data.\n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "n1vUAFL5kfJP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset Summary\n",
+        "\n",
+        "This project uses the **IFSC Competition Results 1990–2019** dataset, which compiles international competition results over nearly three decades.\n",
+        "\n",
+        "The primary sheets used were:\n",
+        "- **Adult Men Results**\n",
+        "- **Adult Women Results**\n",
+        "- **Climbers**\n",
+        "- **All World Championship Results**\n",
+        "\n",
+        "Key features analyzed:\n",
+        "- Year of competition  \n",
+        "- Athlete age at competition  \n",
+        "- Competition score (0–100)  \n",
+        "- Nationality  \n",
+        "- Athlete identity  \n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "pSZZXYMuke7Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Key Findings\n",
+        "\n",
+        "### 1. Age vs Performance\n",
+        "- Raw score data is highly skewed and noisy.\n",
+        "- After averaging scores by age, a clear parabolic pattern emerges:\n",
+        "  - Women peak around **27 years old**\n",
+        "  - Men peak around **31 years old**\n",
+        "- Men show a longer performance plateau, while women experience steeper rise and fall.\n",
+        "\n",
+        "\n",
+        "\n",
+        "### 2. Competitor Age Trends Over Time\n",
+        "- Average competitor age declines steadily over the 30-year period.\n",
+        "- Linear regression confirms this trend:\n",
+        "  - **Men:** −0.0585 years per year  \n",
+        "  - **Women:** −0.1775 years per year  \n",
+        "- This indicates increasing early specialization and youth dominance.\n",
+        "\n",
+        "\n",
+        "\n",
+        "### 3. Country Performance Trends\n",
+        "- Top countries by long-term average performance:\n",
+        "  🇫🇷 France  \n",
+        "  🇦🇹 Austria  \n",
+        "  🇯🇵 Japan  \n",
+        "\n",
+        "- Dominance is cyclical, not permanent — different countries peak at different times.\n",
+        "\n",
+        "- By 2019, average scores converge, suggesting increasing global parity in competitive climbing.\n",
+        "\n",
+        "\n",
+        "\n",
+        "### 4. Participation Trends\n",
+        "- France dominated early professional climbing.\n",
+        "- By 2019, countries with the strongest presence included:\n",
+        "  **USA, Slovenia, Japan, Russia**.\n",
+        "\n",
+        "---\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "t86eC4r9liND"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusion\n",
+        "\n",
+        "This analysis explored how international climbing has evolved from 1990 to 2019 by examining trends in age, performance, and national representation.\n",
+        "\n",
+        "The results show a clear shift toward younger competitors, performance peaks that differ by gender, and the rise of global parity in elite climbing. Countries move through cycles of dominance, indicating that training systems, culture, and infrastructure play critical roles in long-term success.\n",
+        "\n",
+        "While this project focused on descriptive trend modeling, it provides strong groundwork for future predictive models and sport performance analytics.  \n",
+        "\n",
+        "Ultimately, this project reveals that climbing — once dominated by a few European countries — is now a truly global sport, evolving rapidly both technically and competitively.\n"
+      ],
+      "metadata": {
+        "id": "jLkLuLmZlukU"
       }
     }
   ]
