--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -407,10 +407,7 @@
         "Extreme or invalid values were inspected and either:\n",
         "- Corrected (if a clear error), or  \n",
         "- Removed if they would distort the analysis.\n",
-        "\n",
-        "### d) Feature Formatting\n",
-        "Categorical features were standardized to ensure consistent representation  \n",
-        "(e.g., fixing inconsistent labels or capitalization).\n"
+        "\n"
       ],
       "metadata": {
         "id": "S070cwz9gtCT"
@@ -441,56 +438,66 @@
         "adult_w = clean_adult_data(adult_w)\n",
         "\n",
         "print(\"Adult Men shape:\", adult_m.shape)\n",
-        "print(\"Adult Men Head: \\n\", adult_m.head())\n",
+        "print(\"Adult Men Info: \\n\", adult_m.info())\n",
         "\n",
         "print(\"\\n\\nAdult Women shape:\", adult_w.shape)\n",
-        "print(\"Adult Women Head: \\n\", adult_w.head())"
+        "print(\"Adult Women Info: \\n\", adult_w.info())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gIWSVz_Ygtb3",
-        "outputId": "59894274-a9e6-47cf-caf1-2f848b8bcf51"
+        "outputId": "bb5debad-63b0-4870-c0f0-31d617cd38c3"
       },
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Adult Men shape: (1368, 9)\n",
-            "Adult Men Head: \n",
-            "    year                               competition    category nation  \\\n",
-            "1  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUS   \n",
-            "2  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUS   \n",
-            "3  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUT   \n",
-            "4  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUT   \n",
-            "5  1991  UIAA World Championship - Frankfurt 1991  M E N lead    AUT   \n",
+            "Adult Men shape: (1368, 10)\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 1368 entries, 1 to 1468\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column                        Non-Null Count  Dtype  \n",
+            "---  ------                        --------------  -----  \n",
+            " 0   year                          1368 non-null   int64  \n",
+            " 1   competition                   1368 non-null   object \n",
+            " 2   category                      1368 non-null   object \n",
+            " 3   nation                        1368 non-null   object \n",
+            " 4   climber ID                    1368 non-null   int64  \n",
+            " 5   lastname                      1368 non-null   object \n",
+            " 6   firstname                     1145 non-null   object \n",
+            " 7   score                         1368 non-null   float64\n",
+            " 8   age (at time of competition)  1368 non-null   int64  \n",
+            " 9   age                           1368 non-null   float64\n",
+            "dtypes: float64(2), int64(3), object(5)\n",
+            "memory usage: 117.6+ KB\n",
+            "Adult Men Info: \n",
+            " None\n",
             "\n",
-            "   climber ID   lastname firstname  score  age (at time of competition)  \n",
-            "1         347     Verick      Hira    0.0                          18.0  \n",
-            "2         546      Baker      Mark    0.0                          28.0  \n",
-            "3         811      Fürst    Stefan   26.0                          22.0  \n",
-            "4         344     Rieser    Hannes    1.0                          26.0  \n",
-            "5         454  Schwaiger     Josef    0.0                          20.0  \n",
             "\n",
-            "\n",
-            "Adult Women shape: (850, 9)\n",
-            "Adult Women Head: \n",
-            "    year                               competition        category nation  \\\n",
-            "0  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    BEL   \n",
-            "1  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    CZE   \n",
-            "2  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    FRA   \n",
-            "3  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    FRA   \n",
-            "4  1991  UIAA World Championship - Frankfurt 1991  W O M E N lead    FRA   \n",
-            "\n",
-            "   climber ID   lastname firstname  score  age (at time of competition)  \n",
-            "0        1154  Dorsimond  Isabelle   40.0                          30.0  \n",
-            "1        1039   Stranska   Barbara    2.0                          21.0  \n",
-            "2        1163  Patissier  Isabelle   80.0                          24.0  \n",
-            "3        1300    Raybaud   Nanette   55.0                          31.0  \n",
-            "4        1301     Richer   Natalie   47.0                          21.0  \n"
+            "Adult Women shape: (850, 10)\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 850 entries, 0 to 919\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column                        Non-Null Count  Dtype  \n",
+            "---  ------                        --------------  -----  \n",
+            " 0   year                          850 non-null    int64  \n",
+            " 1   competition                   850 non-null    object \n",
+            " 2   category                      850 non-null    object \n",
+            " 3   nation                        850 non-null    object \n",
+            " 4   climber ID                    850 non-null    int64  \n",
+            " 5   lastname                      850 non-null    object \n",
+            " 6   firstname                     658 non-null    object \n",
+            " 7   score                         850 non-null    float64\n",
+            " 8   age (at time of competition)  850 non-null    int64  \n",
+            " 9   age                           850 non-null    float64\n",
+            "dtypes: float64(2), int64(3), object(5)\n",
+            "memory usage: 73.0+ KB\n",
+            "Adult Women Info: \n",
+            " None\n"
           ]
         }
       ]
@@ -599,7 +606,7 @@
         "- Most observed performance scores fall between **0 and 58 points**, indicating wide variability at younger ages.\n",
         "- After approximately **40 years old**, there is a clear performance drop-off:\n",
         "  - Neither males nor females consistently score above **20 points** beyond this age.\n",
-        "- Despite trying multiple polynomial regression fits, **no regression model captured the trend well** due to:\n",
+        "- There appeared to be:\n",
         "  - High variance in raw scores  \n",
         "  - Uneven distribution across age  \n",
         "  - Strong noise in the data  \n",
